<resources>
    <string name="app_name">MedicalAppLicenta</string>
    <string name="open_toggle">Open</string>
    <string name="close_toggle">Close</string>
    <string name="entitate_specialitati">Specialitati</string>
    <string-array name="grupe_sange">
        <item>Necunoscută</item>
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="grade_profesionale">
        <item>Nespecificat</item>
        <item>Medic generalist</item>
        <item>Medic rezident</item>
        <item>Medic specialist</item>
        <item>Medic primar</item>
        <item>Psiholog</item>
    </string-array>
    <string-array name="zile_saptamana">
        <item>luni</item>
        <item>marți</item>
        <item>miercuri</item>
        <item>joi</item>
        <item>vineri</item>
    </string-array>
    <string-array name="ani">
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string-array name="statusuri_facturi">
        <item>Toate</item>
        <item>Achitate</item>
        <item>Neachitate</item>
        <item>Anulate</item>
    </string-array>
    <string name="pattern_email_medic">^([A-Za-z0-9._]+)(@clinica-medicala\\.ro)$</string>
    <string name="pattern_numar_telefon">^07[2-8][0-9]{7}$</string>
    <string name="pattern_cnp">^[1-9]\\d{2}(0[1-9]|1[0-2])(0[1-9]|[12]\\d|3[01])(0[1-9]|[1-4]\\d|5[0-2]|99)(00[1-9]|0[1-9]\\d|[1-9]\\d\\d)\\d$</string>
    <string name="pattern_greutate">^[1-9][0-9]\\.[0-9]$</string>
    <string name="pattern_inaltime">^([1-2]\\.([0-9]{2}|[0-9]{1}))$</string>
    <string name="pattern_data_expirarii">^([0][1-9]|[1-2][0-9]|[3][0-1])/([2][2-9]|[3][0-5])$</string>
    <string name="email_mandatory">Email <font color="#FF0000">*</font> </string>
    <string name="email">Email</string>
    <string name="parola">Parola <font color="#FF0000">*</font> </string>
    <string name="greeting_message">Bine ai (re)venit!</string>
    <string name="conectare_pacient">Conectare pacient</string>
    <string name="forgot_password">Am uitat parola</string>
    <string name="remember_me">Rămâi autentificat(ă)</string>
    <string name="login">Intră în cont</string>
    <string name="create_account">Nu ai cont? Înregistrează-te</string>
    <string name="sunt_medic">Sunt medic</string>
    <string name="icon_pacient">Icon pacient</string>
    <string name="icon_medic">Icon medic</string>
    <string name="necunoscut">Necunoscută</string>
    <string name="nume">Nume <font color="#FF0000">*</font></string>
    <string name="prenume">Prenume <font color="#FF0000">*</font></string>
    <string name="cnp">CNP <font color="#FF0000">*</font></string>
    <string name="numar_de_telefon_mandatory">Număr de telefon <font color="#FF0000">*</font></string>
    <string name="numar_de_telefon">Număr de telefon</string>
    <string name="adresa">Adresa</string>
    <string name="data_nasterii_mandatory">Data nașterii <font color="#FF0000">*</font></string>
    <string name="data_nasterii">Data nașterii</string>
    <string name="selectati_data">Selectați data</string>
    <string name="greutate">Greutate</string>
    <string name="inaltime">Înălțime</string>
    <string name="confirmati_parola">Confirmați parola <font color="#FF0000">*</font></string>
    <string name="register">Creează cont</string>
    <string name="grupa_de_sange">Grupa de sânge</string>
    <string name="atentionare">Câmpurile marcate cu <font color="#FF0000">*</font> sunt obligatorii!</string>
    <string name="err_empty_nume">Introduceți numele!</string>
    <string name="err_empty_prenume">Introduceți prenumele!</string>
    <string name="err_empty_cnp">Introduceți CNP-ul!</string>
    <string name="err_not_valid_cnp">CNP-ul nu este valid!</string>
    <string name="err_empty_telefon">Introduceți numărul de telefon!</string>
    <string name="err_not_valid_telefon">Formatul acceptat este: 07xxxxxxxx!</string>
    <string name="err_empty_data_nasterii">Alegeți data nașterii!</string>
    <string name="err_not_valid_data_nasterii">Data nașterii nu corespunde cu CNP-ul!</string>
    <string name="default_empty_double">0.0</string>
    <string name="err_not_valid_greutate">Introduceți o greutate validă! (de ex: 45.7)</string>
    <string name="err_not_valid_inaltime">Introduceți un o înălțime validă! (de ex: 1.65)</string>
    <string name="err_empty_email">Introduceți emailul!</string>
    <string name="err_not_valid_email">Introduceți un email valid!</string>
    <string name="err_empty_parola">Introduceți parola!</string>
    <string name="err_not_valid_parola">Parola trebuie să conțină cel puțin 6 caractere!</string>
    <string name="err_empty_confirmare_parola">Reintroduceți parola!</string>
    <string name="err_not_valid_confirmare_parola">Cele 2 parole nu corespund!</string>
    <string name="err_empty_nume_titular">Introduceți numele titularului!</string>
    <string name="err_empty_numar_card">Introduceți numărul cardului!</string>
    <string name="err_not_valid_numar_card">Introduceți un număr de card valid!</string>
    <string name="err_empty_data_expirarii">Introduceți data expirării!</string>
    <string name="err_not_valid_data_expirarii">Introduceți o dată validă în formatul MM/yy!</string>
    <string name="err_empty_cvv">Introduceți codul CVV/CVC!</string>
    <string name="err_not_valid_cvv">Introduceți un CVV/CVC valid!</string>
    <string name="varsta">Vârsta</string>
    <string name="sex">Sex</string>
    <string name="modifica_date_personale">Modifică date personale</string>
    <string name="salveaza">Salvează</string>
    <string name="renunta">Renunță</string>
    <string name="schimba_parola">Schimbă parola</string>
    <string name="sterge_contul">Șterge contul</string>
    <string name="parola_actuala">Parola actuală</string>
    <string name="parola_noua">Parola nouă</string>
    <string name="confirmati_noua_parola">Confirmați noua parolă</string>
    <string name="schimba_email">Schimbă email</string>
    <string name="email_nou">Email nou <font color="#FF0000">*</font></string>
    <string name="mesaj_stergere_cont">Sigur doriți să vă ștergeți <b>definitiv</b> contul?</string>
    <string name="da">Da</string>
    <string name="nu">Nu</string>
    <string name="title_home">Home</string>
    <string name="medici">Medici</string>
    <string name="investigatii_si_preturi">Investigații și prețuri</string>
    <string name="programari">Programări</string>
    <string name="facturi">Facturi</string>
    <string name="profil">Profil</string>
    <string name="logout">Ieși din cont</string>
    <string name="feedback_aplicatie">Feedback aplicație</string>
    <string name="title_despre_noi">Despre noi</string>
    <string name="call_center">Call Center</string>
    <string name="title_medici">Medici</string>
    <string name="toate_specialitatile">Toate specialitățile</string>
    <string name="specialitate">Specialitate</string>
    <string name="specialitate_medic">Specialitate <font color="#FF0000">*</font></string>
    <string name="err_empty_specialitate">Selectați specialitatea</string>
    <string name="selectati_o_specialitate">Selectați o specialitate</string>
    <string name="info_investigatii">Pentru a putea vizualiza informații despre investigații vă rugăm să selectați o specialitate</string>
    <string name="icon_specialitati">Icon specialitati</string>
    <string name="title_programare_noua">Programare nouă</string>
    <string name="data_programarii">Data programării</string>
    <string name="investigatie">Investigație</string>
    <string name="selectati_investigatia">Selectați investigația</string>
    <string name="ore_disponibile">Ore disponibile</string>
    <string name="info_selectare_data">Pentru a vizualiza orele disponibile vă rugăm să selectați data dorită pentru programare</string>
    <string name="istoric">Istoric</string>
    <string name="viitoare">Viitoare</string>
    <string name="icon_indisponibil">Icon indisponibil</string>
    <string name="nicio_programare">Nu s-au găsit programări</string>
    <string name="adauga_programare">Adauga programare</string>
    <string name="icon_programari">Icon programari</string>
    <string name="valoare">Valoare:</string>
    <string name="data_emiterii">Data emiterii:</string>
    <string name="data_scadenta">Data scadentă:</string>
    <string name="err_empty_investigatie">Selectați investigația dorită!</string>
    <string name="nota">Notă</string>
    <string name="program">Program</string>
    <string name="email_medic">Email</string>
    <string name="programeaza">Programează-te</string>
    <string name="conectare_medic">Conectare medic</string>
    <string name="sunt_pacient">Sunt pacient</string>
    <string name="err_not_valid_email_doctor">Introduceți emailul oficial (de forma adresa@clinica-medicala.ro)!</string>
    <string name="err_conectare_medic">Vă rugăm să vă conectați din pagina medicului!</string>
    <string name="err_credentiale">Credențiale invalide!</string>
    <string name="numar_de_telefon_opt">Număr de telefon</string>
    <string name="grad_profesional">Grad profesional</string>
    <string name="title_profil">Profil</string>
    <string name="nespecificat">Nespecificat</string>
    <string name="program_lucru">Program lucru <font color="#FF0000">*</font> </string>
    <string name="zi_de_lucru">Zi de lucru</string>
    <string name="ora_de_sfarsit">Ora de sfârșit</string>
    <string name="ora_de_inceput">Ora de început</string>
    <string name="adauga">Adaugă</string>
    <string name="err_empty_program_lucru">Completați programul de lucru!</string>
    <string name="elimina">Elimină</string>
    <string name="status_onorata">onorată</string>
    <string name="status_neonorata">neonorată</string>
    <string name="status_noua">nouă</string>
    <string name="status_anulata">anulată</string>
    <string name="status_necompletat">completează status</string>
    <string name="calculator_bmi">Calculator BMI</string>
    <string name="cm">cm</string>
    <string name="calculeaza_bmi">Calculează BMI</string>
    <string name="kg">kg</string>
    <string name="bmi_subponderal">Subponderal</string>
    <string name="bmi_normoponderal">Normoponderal</string>
    <string name="bmi_supraponderal">Supraponderal</string>
    <string name="bmi_obezitate1">Obezitate de grad I</string>
    <string name="bmi_obezitate2">Obezitate de grad II</string>
    <string name="bmi_obezitate_morbida">Obezitate morbidă</string>
    <string name="greutate_minima">30,0</string>
    <string name="inaltime_minima">100</string>
    <string name="icon_plus">Icon plus</string>
    <string name="icon_minus">Icon minus</string>
    <string name="icon_bmi">Icon BMI</string>
    <string name="pacienti">Pacienți</string>
    <string name="niciun_pacient">Nu s-au găsit pacienți</string>
    <string name="nicio_ora">Nu s-au găsit ore disponibile</string>
    <string name="acorda_feedback">Acordă feedback</string>
    <string name="trimite">Trimite</string>
    <string name="recenzie">Câteva cuvinte despre experiența avută</string>
    <string name="feedback_pacienti">Feedback pacienți</string>
    <string name="niciun_feedback">Nu s-a găsit niciun feedback</string>
    <string name="recenzie_">Recenzie</string>
    <string name="nota1">1</string>
    <string name="nota2">2</string>
    <string name="nota3">3</string>
    <string name="nota4">4</string>
    <string name="nota5">5</string>
    <string name="nota6">6</string>
    <string name="nota7">7</string>
    <string name="nota8">8</string>
    <string name="nota9">9</string>
    <string name="nota10">10</string>
    <string name="notificari">Notificări</string>
    <string name="nicio_notificare">Nu aveți nicio notificare</string>
    <string name="contact">Contact</string>
    <string name="documente_personale">Documente personale</string>
</resources>