<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_light_blue"
    tools:context=".activitati.ConectarePacientActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/custom_blue" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/greeting_message"
        android:textColor="@color/custom_light_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:translationZ="90dp" />

    <View
        android:id="@+id/topWave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/topView"
        android:background="@drawable/ic_wave_top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topWave"
        android:background="@color/custom_light_blue">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/icon_medic"
            app:srcCompat="@drawable/ic_doctor" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/conectare_medic"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:theme="@style/TextInputLayoutStyle"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietLoginEmailMedic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email_mandatory"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilParola"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilEmail"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:theme="@style/TextInputLayoutStyle"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="0dp"
            app:passwordToggleDrawable="@drawable/ic_visibility_selector"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietLoginParolaMedic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_parola"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/parola"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvResetareParola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilParola"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/cbRamaiAutentificat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilParola"
            android:layout_alignParentStart="true"
            android:buttonTint="@color/custom_blue"
            android:checked="true"
            android:text="@string/remember_me"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginMedic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbRamaiAutentificat"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/background_butoane"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/custom_light_blue"
            android:textSize="16sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tvCreareCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomWave"
        android:layout_centerHorizontal="true"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/create_account"
        android:textColor="@color/custom_blue" />

    <View
        android:id="@+id/bottomWave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_above="@+id/bottomView"
        android:background="@drawable/ic_wave_bottom" />

    <RelativeLayout
        android:id="@+id/rlSuntPacient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:translationZ="90dp">

        <ImageView
            android:id="@+id/ivPacient"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:clickable="true"
            android:contentDescription="@string/icon_pacient"
            android:focusable="true"
            app:srcCompat="@drawable/ic_pacient" />

        <TextView
            android:id="@+id/tvSuntPacient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivPacient"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/sunt_pacient"
            android:textColor="@color/custom_light_blue" />

    </RelativeLayout>

    <View
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/custom_blue" />

</RelativeLayout>